--- a/src/app/UI/modules/login/login.component.html
+++ b/src/app/UI/modules/login/login.component.html
@@ -33,14 +33,25 @@
                             <input type="password" id="form2Example28" class="form-control form-control-lg"
                                 formControlName="password" />
                             <label class="form-label" for="form2Example28">Password</label>
+                            <div *ngIf="c['password'].touched || c['password'].dirty">
+                                <!-- Todo lo que esta dentro de esta etiqiueta solo se ejecuta si el campo password es tocado o tiene información-->
+                                <div *ngFor="let validation of validationMessages.password">
+                                    <!--se va a ejecutar la cantidad de validaciones que se tengan definidas para el campo-->
+                                    <label class="text-danger" *ngIf="c['password'].hasError(validation.type)">
+                                        {{validation.message}}
+                                    </label>
+                                </div>
+                            </div>
                         </div>
 
+
+                       
                         <div class="pt-1 mb-4">
                             <button class="btn btn-info btn-lg btn-block" type="button" (click)="login()">Login</button>
                         </div>
 
                         <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                        <p>Don't have an account? <a href="#!" class="link-info">Register here</a></p>
+                        <p>Don't have an account? <a class="link-info" routerLink="/fullscreen/register">Register here</a></p>
 
                     </form>
 
